# python-project-83

./: .env.sample  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: page_analyzer.yml
page_analyzer/: __init__.py  app.py  database.py  db.py  html.py  urls.py  validate.py
page_analyzer/templates/: base.html  error.html  index.html  show_url.html  show_urls.html  url_details.html  urls.html
page_analyzer/templates/errors/: 500.html
page_analyzer/templates/urls/: show_url.html
test/: conftest.py
